# llm-docs-manager

./: .gitignore  CLAUDE.md  README.md  biome.json  index.ts  main.py  package.json  pyproject.toml
.claude/skills/code-intelligence/: SKILL.md
.claude/skills/markdown-skills/: SKILL.md
.serena/: project.yml
docs/: design.md.sample
docs/feat/: agents-commands-sync.md
docs/requirements/: biome.md  skills-sync.md  template-sync.md
src/docs_manager/: __init__.py  update.py
