[project]
name = "docs-manager"
version = "0.1.0"
description = "GitHub template synchronization tool for project documentation"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
docs-manager-update = "docs_manager.update:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
